Changed the test name and made it also visible to ctest.

--- a/tests/cudf/generator/CMakeLists.txt
+++ b/tests/cudf/generator/CMakeLists.txt
@@ -1,11 +1,9 @@
 
-set(test_name "sample_generator")
+set(test_name "sample_generator_test")
 
 project(${test_name} CXX CUDA)
 
 set(test_sources ${CMAKE_CURRENT_SOURCE_DIR}/random_generator_test.cu)
-
-add_test(${test_name} ${test_name})
 
 add_executable(${test_name} ${test_sources})
 
@@ -16,3 +14,5 @@ target_link_libraries(${test_name} ${CUDA_CUDA_LIBRARY} GTest::GTest GTest::Main
 set_target_properties(${test_name} PROPERTIES LINKER_LANGUAGE CXX)
 
 set_target_properties(${test_name} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/gtests/")
+
+add_test(NAME ${test_name} COMMAND ${test_name})
