--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -70,6 +70,7 @@ add_subdirectory(integration)
 add_subdirectory(dtypes)
 add_subdirectory(pjoins)
 add_subdirectory(evaluate_query)
+add_subdirectory(gdf_column_cpp)
 add_subdirectory(order-by)
 add_subdirectory(gdf-ref-counter)
 add_subdirectory(where)
