--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,7 +6,7 @@
 #pass the dependency libraries as optional arguments using ${ARGN}
 #NOTE the order of libraries matter, so try to link first with the most high level lib
 function(configure_test TEST_NAME Tests_SRCS)
-    include_directories(${CMAKE_SOURCE_DIR}/src ${CMAKE_SOURCE_DIR}/tests/utils)
+    include_directories(${CMAKE_SOURCE_DIR}/src ${CMAKE_SOURCE_DIR}/tests/utils ${CMAKE_SOURCE_DIR}/thirdparty/nvstrings/include)
 
     add_executable(${TEST_NAME} ${Tests_SRCS})
 
@@ -20,6 +20,7 @@ function(configure_test TEST_NAME Tests_SRCS)
         ${BLAZINGDB_PROTOCOL_STATIC_LIB}
 
         ${LIBGDF_STATIC_LIB}
+        NVCategory
         NVStrings
         rmm
 
