--- a/tests/nvcategory/CMakeLists.txt
+++ b/tests/nvcategory/CMakeLists.txt
@@ -12,8 +12,8 @@ set(source_files
     ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/jit/util/operator.cpp
     ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/jit/util/type.cpp
     #todo remove when the PR https://github.com/rapidsai/cudf/pull/643 is accepted 
-    ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/replace/replace.cu
-        ${CMAKE_SOURCE_DIR}/src/Config/Config.cpp
+    #${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/replace/replace.cu
+    ${CMAKE_SOURCE_DIR}/src/Config/Config.cpp
 
 )
 
