--- a/tests/interpreter/CMakeLists.txt
+++ b/tests/interpreter/CMakeLists.txt
@@ -45,3 +45,12 @@ set(project_tests_src
 
 configure_test(project_tests "${project_tests_src}")
 
+
+set(project_coalesce_tests_src
+    ${source_files_src}
+    interops_coalesce_test.cu
+) 
+
+configure_test(project_coalesce_tests "${project_coalesce_tests_src}")
+
+
