Fix build time of unit tests using an intermediate internal lib

--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -16,34 +16,7 @@ function(configure_benchmark BENCHMARK_NAME Bench_SRCS)
         benchmark
         benchmark_main
 
-        ${BLAZINGDB_IO_STATIC_LIB}
-        ${BLAZINGDB_PROTOCOL_STATIC_LIB}
-
-        ${LIBGDF_STATIC_LIB}
-        NVStrings
-        rmm
-
-        cudart
-        cuda
-        ${CUDA_CUDA_LIBRARY}
-        ${CUDA_NVRTC_LIBRARY}
-        ${CUDA_NVTX_LIBRARY}
-
-        ${PARQUET_STATIC_LIB}
-        ${ARROW_STATIC_LIB}
-        ${THRIFT_STATIC_LIB}
-        ${SNAPPY_STATIC_LIB}
-        ${BROTLI_STATIC_LIB}
-        ${ZSTD_STATIC_LIB}
-        ${LZ4_STATIC_LIB}
-        ${FLATBUFFERS_STATIC_LIB}
-
-        aws-cpp-sdk-s3
-        aws-cpp-sdk-s3-encryption
-
-        Boost::filesystem
-        Boost::system
-        Boost::regex
+        testing-libgdf_lib
     )
 
     set_target_properties(${BENCHMARK_NAME} PROPERTIES
@@ -56,6 +29,7 @@ endfunction()
 # Configure benchmarks with Google Benchmark
 # -------------------
 message(STATUS "******** Configuring Benchmarks ********")
+
 
 add_subdirectory(jit)
 add_subdirectory(interops)
