--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,14 +93,13 @@ set(SRC_FILES ${CMAKE_SOURCE_DIR}/src/io/data_provider/UriDataProvider.cpp
               ${CMAKE_SOURCE_DIR}/src/Utils.cu
               ${CMAKE_SOURCE_DIR}/src/GDFCounter.cu
               ${CMAKE_SOURCE_DIR}/src/GDFColumn.cu
-              ${CMAKE_SOURCE_DIR}/src/testing-libgdf.cu
               ${cudf_adapter_source_files}
               ${binary_operation_source_files}
               ${parquet_reader_source_files})
 
-add_executable(testing-libgdf ${SRC_FILES})
+add_library(testing-libgdf_lib ${SRC_FILES})
 
-target_link_libraries(testing-libgdf
+target_link_libraries(testing-libgdf_lib
     ${BLAZINGDB_IO_STATIC_LIB}
     Threads::Threads
     ${ZEROMQ_STATIC_LIB}
@@ -132,6 +131,10 @@ target_link_libraries(testing-libgdf
     Boost::system
     Boost::regex
 )
+
+set(SRC_FILES_APP ${CMAKE_SOURCE_DIR}/src/testing-libgdf.cu)
+add_executable(testing-libgdf ${SRC_FILES_APP})
+target_link_libraries(testing-libgdf testing-libgdf_lib)
 
 # Tests
 if(BUILD_TESTING)
