--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,6 +81,7 @@ set(SRC_FILES ${CMAKE_SOURCE_DIR}/src/communication/adapter/GpuFunctionsAdapter.
               ${CMAKE_SOURCE_DIR}/src/communication/factory/MessageFactory.cpp
               ${CMAKE_SOURCE_DIR}/src/communication/network/Client.cpp
               ${CMAKE_SOURCE_DIR}/src/communication/network/Server.cpp
+              ${CMAKE_SOURCE_DIR}/src/communication/CommunicationData.cpp
               ${CMAKE_SOURCE_DIR}/src/config/BlazingConfig.cpp
               ${CMAKE_SOURCE_DIR}/src/io/data_provider/UriDataProvider.cpp
               ${CMAKE_SOURCE_DIR}/src/FreeMemory.cpp
