[feature/simple-distribution] Add slice for partition data function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,6 +83,8 @@ set(SRC_FILES ${CMAKE_SOURCE_DIR}/src/communication/adapter/GpuFunctionsAdapter.
               ${CMAKE_SOURCE_DIR}/src/communication/network/Server.cpp
               ${CMAKE_SOURCE_DIR}/src/communication/CommunicationData.cpp
               ${CMAKE_SOURCE_DIR}/src/config/BlazingConfig.cpp
+              ${CMAKE_SOURCE_DIR}/src/distribution/internal.cpp
+              ${CMAKE_SOURCE_DIR}/src/distribution/partitions.cpp
               ${CMAKE_SOURCE_DIR}/src/distribution/primitives.cpp
               ${CMAKE_SOURCE_DIR}/src/io/data_provider/UriDataProvider.cpp
               ${CMAKE_SOURCE_DIR}/src/FreeMemory.cpp
