--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -68,6 +68,7 @@ add_subdirectory(logical-filter)
 add_subdirectory(calcite-interpreter)
 add_subdirectory(communication)
 add_subdirectory(cudf/generator)
+add_subdirectory(distribution)
 add_subdirectory(integration)
 add_subdirectory(dtypes)
 add_subdirectory(pjoins)
