Updated all the CMakeLists.txt files with the distribution and communication source code.

--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -18,6 +18,7 @@ function(configure_benchmark BENCHMARK_NAME Bench_SRCS)
 
         ${BLAZINGDB_IO_STATIC_LIB}
         ${BLAZINGDB_PROTOCOL_STATIC_LIB}
+        ${BLAZINGDB_COMMUNICATION_STATIC_LIB}
 
         ${LIBGDF_STATIC_LIB}
         NVStrings
