--- a/benchmarks/interops/CMakeLists.txt
+++ b/benchmarks/interops/CMakeLists.txt
@@ -4,17 +4,6 @@ include_directories(
  
 
 set(source_files_src
-    ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/jit/code/gdf-data.cpp
-    ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/jit/code/kernel.cpp
-    ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/jit/code/operation.cpp
-    ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/jit/code/traits.cpp
-    ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/jit/core/binop.cpp
-    ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/jit/core/launcher.cpp
-    ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/jit/util/operator.cpp
-    ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/jit/util/type.cpp
-    #todo remove when the PR https://github.com/rapidsai/cudf/pull/643 is accepted 
-    ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/replace/replace.cu
-    ${CMAKE_SOURCE_DIR}/src/Config/Config.cpp
     ${CMAKE_SOURCE_DIR}/src/Interpreter/interpreter_cpp.cu
     ${CMAKE_SOURCE_DIR}/src/CalciteInterpreter.cpp
     ${CMAKE_SOURCE_DIR}/src/CalciteExpressionParsing.cpp
@@ -26,8 +15,15 @@ set(source_files_src
     ${CMAKE_SOURCE_DIR}/src/LogicalFilter.cpp
     ${CMAKE_SOURCE_DIR}/src/CodeTimer.cpp
     ${CMAKE_SOURCE_DIR}/src/ResultSetRepository.cpp
-    ${CMAKE_SOURCE_DIR}/src/cuDF/Allocator.cpp
-    ${CMAKE_SOURCE_DIR}/src/Utils.cu 
+    ${CMAKE_SOURCE_DIR}/src/Utils.cu
+    ${CMAKE_SOURCE_DIR}/src/Config/Config.cpp
+    ${CMAKE_SOURCE_DIR}/src/exception/RalException.cpp
+    ${CMAKE_SOURCE_DIR}/src/Traits/RuntimeTraits.cpp
+    ${CMAKE_SOURCE_DIR}/src/operators/OrderBy.cpp
+    ${cudf_adapter_source_files}
+    ${binary_operation_source_files}
+    ${communication_source_files}
+    ${distribution_source_files}
 ) 
 
 set(interops_bench_src
