--- a/tests/groupbywoagg/CMakeLists.txt
+++ b/tests/groupbywoagg/CMakeLists.txt
@@ -2,38 +2,28 @@ include_directories(
     ${CMAKE_SOURCE_DIR}/thirdparty/jitify
     ${CMAKE_SOURCE_DIR}/src/gdf_wrapper)
 
-set(source_files
-    ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/jit/code/gdf-data.cpp
-    ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/jit/code/kernel.cpp
-    ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/jit/code/operation.cpp
-    ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/jit/code/traits.cpp
-    ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/jit/core/binop.cpp
-    ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/jit/core/launcher.cpp
-    ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/jit/util/operator.cpp
-    ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/jit/util/type.cpp
-    #todo remove when the PR https://github.com/rapidsai/cudf/pull/643 is accepted 
-    ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/replace/replace.cu
-        ${CMAKE_SOURCE_DIR}/src/Config/Config.cpp
-)
-
 set(groupbywoagg-test_SRCS
-  ${CMAKE_SOURCE_DIR}/src/Utils.cu
-  ${CMAKE_SOURCE_DIR}/src/GDFCounter.cu
-  ${CMAKE_SOURCE_DIR}/src/FreeMemory.cpp
-  ${CMAKE_SOURCE_DIR}/src/GDFColumn.cu
-  ${CMAKE_SOURCE_DIR}/src/ColumnManipulation.cu
-  ${CMAKE_SOURCE_DIR}/src/CodeTimer.cpp
-  ${CMAKE_SOURCE_DIR}/src/JoinProcessor.cpp
-  ${CMAKE_SOURCE_DIR}/src/LogicalFilter.cpp
-  ${CMAKE_SOURCE_DIR}/src/CalciteExpressionParsing.cpp
-  ${CMAKE_SOURCE_DIR}/src/ResultSetRepository.cpp
-      ${CMAKE_SOURCE_DIR}/src/Interpreter/interpreter_cpp.cu
-  ${CMAKE_SOURCE_DIR}/src/CalciteInterpreter.cpp
-  ${source_files}
-  ${CMAKE_SOURCE_DIR}/src/cuDF/Allocator.cpp
-  groupbywoagg-tests.cu
+    ${CMAKE_SOURCE_DIR}/src/Utils.cu
+    ${CMAKE_SOURCE_DIR}/src/GDFCounter.cu
+    ${CMAKE_SOURCE_DIR}/src/FreeMemory.cpp
+    ${CMAKE_SOURCE_DIR}/src/GDFColumn.cu
+    ${CMAKE_SOURCE_DIR}/src/ColumnManipulation.cu
+    ${CMAKE_SOURCE_DIR}/src/CodeTimer.cpp
+    ${CMAKE_SOURCE_DIR}/src/JoinProcessor.cpp
+    ${CMAKE_SOURCE_DIR}/src/LogicalFilter.cpp
+    ${CMAKE_SOURCE_DIR}/src/CalciteExpressionParsing.cpp
+    ${CMAKE_SOURCE_DIR}/src/ResultSetRepository.cpp
+    ${CMAKE_SOURCE_DIR}/src/Interpreter/interpreter_cpp.cu
+    ${CMAKE_SOURCE_DIR}/src/CalciteInterpreter.cpp
+    ${CMAKE_SOURCE_DIR}/src/Config/Config.cpp
+    ${CMAKE_SOURCE_DIR}/src/exception/RalException.cpp
+    ${CMAKE_SOURCE_DIR}/src/Traits/RuntimeTraits.cpp
+    ${CMAKE_SOURCE_DIR}/src/operators/OrderBy.cpp
+    ${cudf_adapter_source_files}
+    ${binary_operation_source_files}
+    ${communication_source_files}
+    ${distribution_source_files}
+    groupbywoagg-tests.cu
 )
 
 configure_test(groupbywoagg-test "${groupbywoagg-test_SRCS}")
-
-
