Added the column slice for valids. Changed the padded length in gdf_column_cpp for arrow alignment.

--- a/src/cuDF/CMakeLists.txt
+++ b/src/cuDF/CMakeLists.txt
@@ -2,4 +2,5 @@
 set(source_files
     ${CMAKE_SOURCE_DIR}/src/cuDF/Allocator.cpp
     ${CMAKE_SOURCE_DIR}/src/cuDF/generator/sample_generator.cu
+    ${CMAKE_SOURCE_DIR}/src/cuDF/column_slice/column_cpp_slice.cu
 )
