--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -67,6 +67,7 @@ message(STATUS "******** Configuring tests ********")
 add_subdirectory(logical-filter)
 add_subdirectory(calcite-interpreter)
 add_subdirectory(communication)
+add_subdirectory(cudf/column_slice)
 add_subdirectory(cudf/generator)
 add_subdirectory(distribution)
 add_subdirectory(integration)
