Added the tests for the join distributed functionality.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -45,6 +45,7 @@ add_subdirectory(calcite-interpreter)
 add_subdirectory(communication)
 add_subdirectory(cudf/column_slice)
 add_subdirectory(cudf/generator)
+add_subdirectory(distributed-join)
 add_subdirectory(distribution)
 add_subdirectory(integration)
 add_subdirectory(dtypes)
