Include custrings dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,6 @@ cmake_minimum_required(VERSION 3.12 FATAL_ERROR)
 
 project(blazingdb-ral C CXX CUDA)
 
-
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/" ${CMAKE_MODULE_PATH})
 message(STATUS "CMAKE_MODULE_PATH: ${CMAKE_MODULE_PATH}")
 
@@ -44,6 +43,7 @@ include(ConfigureLibGDF)
 include(ConfigureBlazingDBProtocol)
 include(ConfigureBlazingDBIO)
 include(ConfigureGoogleBenchmark)
+include(ConfigureNVStrings)
 
 find_package(Threads)
 
