--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -16,6 +16,13 @@ function(configure_benchmark BENCHMARK_NAME Bench_SRCS)
         benchmark
         benchmark_main
 
+    cuda
+    /usr/local/cuda/lib64/libcudart.so
+    ${UCX_UCT_STATIC_LIB}
+    ${GDR_STATIC_LIB}
+    ${UCX_UCS_STATIC_LIB}
+    ${UCX_UCM_STATIC_LIB}
+
         testing-libgdf_lib
     )
 
