--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ include(ConfigureParquet)
 include(ConfigureNVStrings)
 include(ConfigureJitify)
 include(ConfigureLibGDF)
+include(ConfigureGDR)
 include(ConfigureUCX)
 include(ConfigureBlazingDBProtocol)
 include(ConfigureBlazingDBCommunication)
