--- a/tests/gdf_column_cpp/CMakeLists.txt
+++ b/tests/gdf_column_cpp/CMakeLists.txt
@@ -11,7 +11,7 @@ set(test_name "gdf_column_cpp_test")
 project(${test_name} CXX CUDA)
 
 set(test_sources
-    ${CMAKE_CURRENT_SOURCE_DIR}/gdf_column_cpp_test.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/gdf_column_cpp_test.cu
     ${CMAKE_SOURCE_DIR}/src/GDFColumn.cu
     ${CMAKE_SOURCE_DIR}/src/GDFCounter.cu
     ${CMAKE_SOURCE_DIR}/src/cuDF/Allocator.cpp
