[ucx] update unit tests and add a stress_distribution test(wip)

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -68,6 +68,7 @@ add_subdirectory(groupbywoagg)
 add_subdirectory(interpreter)
 add_subdirectory(utils)
 add_subdirectory(resultset-repository)
+add_subdirectory(stress_distribution)
 
 
 message(STATUS "******** Tests are ready ********")
