--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,7 @@ include(ConfigureSnappy)
 include(ConfigureThrift)
 include(ConfigureArrow)
 include(ConfigureParquet)
+include(ConfigureRMM)
 include(ConfigureNVStrings)
 include(ConfigureJitify)
 include(ConfigureLibGDF)
