use pre compiler defs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,10 @@ include(ConfigureRapidJSON)
 find_package(Threads)
 
 # BEGIN MAIN #
+
+# TODO percy manage cuda definitions
+add_definitions(${CXX_DEFINES})
+
 include_directories(
     ${LIB_BLAZINGIO_INCLUDEDIR}
     ${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR}
