--- a/src/distribution/CMakeLists.txt
+++ b/src/distribution/CMakeLists.txt
@@ -4,4 +4,5 @@ set(source_files
     ${CMAKE_SOURCE_DIR}/src/distribution/NodeColumns.cpp
     ${CMAKE_SOURCE_DIR}/src/distribution/NodeSamples.cpp
     ${CMAKE_SOURCE_DIR}/src/distribution/primitives.cpp
+    ${CMAKE_SOURCE_DIR}/src/distribution/primitives_util.cu
 )
