--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -128,7 +128,10 @@ target_link_libraries(testing-libgdf_lib
     Boost::regex
 )
 
-set(SRC_FILES_APP ${CMAKE_SOURCE_DIR}/src/testing-libgdf.cu)
+set(SRC_FILES_APP
+    ${SRC_FILES}
+    ${CMAKE_SOURCE_DIR}/src/testing-libgdf.cu)
+
 add_executable(testing-libgdf ${SRC_FILES_APP})
 target_link_libraries(testing-libgdf testing-libgdf_lib)
 
