Adding nvcategory support

--- a/tests/stress_distribution/CMakeLists.txt
+++ b/tests/stress_distribution/CMakeLists.txt
@@ -1,5 +1,5 @@
 set(stress_distribution_test_SRCS
-    send_samples_test.cpp
+    send_samples_test.cu
     ${CMAKE_SOURCE_DIR}/tests/utilities/gdf_column_cpp_utilities.cu
     ${CMAKE_SOURCE_DIR}/src/Traits/RuntimeTraits.cpp
 )
