added change to cmake:

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,7 @@ include(ConfigureAWSSDK)
 #include(ConfigureThrift)
 #include(ConfigureArrow)
 #include(ConfigureParquet)
-#include(ConfigureRMM)
+include(ConfigureRMM)
 #include(ConfigureNVStrings)
 #include(ConfigureJitify)
 include(ConfigureLibGDF)
