trying to fix cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -135,12 +135,12 @@ target_link_libraries(testing-libgdf_lib
     ${CUDA_CUDA_LIBRARY}
     ${CUDA_NVRTC_LIBRARY}
     ${CUDA_NVTX_LIBRARY}
-
+    parquet-cpp
 
     aws-cpp-sdk-s3
     aws-cpp-sdk-s3-encryption
 
-
+    parquet
     # Library needed for blazing communication repository (debug)
     gcov
 )
@@ -180,6 +180,7 @@ find_library(FLATBUFFERS_LIBRARY "flatbuffers"
                 "$ENV{CONDA_PREFIX}/lib")
 
 add_library(flatbuffers STATIC IMPORTED ${FLATBUFFERS_LIBRARY})
+
 include_directories(${FLATBUFFERS_INCLUDE})
 ###################################################################################################
 # - NVStrings -------------------------------------------------------------------------------------
@@ -212,7 +213,7 @@ add_library(NVCategory SHARED IMPORTED ${NVCATEGORY_LIBRARY})
 if (NVSTRINGS_INCLUDE AND NVCATEGORY_LIBRARY)
     set_target_properties(NVCategory PROPERTIES IMPORTED_LOCATION ${NVCATEGORY_LIBRARY})
 endif (NVSTRINGS_INCLUDE AND NVCATEGORY_LIBRARY)
-
+target_link_libraries(testing-libgdf_lib flatbuffers rmm nvstrings nvcategory)
 
 set(SRC_FILES_APP
     ${CMAKE_SOURCE_DIR}/src/testing-libgdf.cu)
