--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -215,7 +215,7 @@ add_library(NVCategory SHARED IMPORTED ${NVCATEGORY_LIBRARY})
 if (NVSTRINGS_INCLUDE AND NVCATEGORY_LIBRARY)
     set_target_properties(NVCategory PROPERTIES IMPORTED_LOCATION ${NVCATEGORY_LIBRARY})
 endif (NVSTRINGS_INCLUDE AND NVCATEGORY_LIBRARY)
-target_link_libraries(testing-libgdf_lib flatbuffers rmm)
+target_link_libraries(testing-libgdf_lib rmm)
 
 set(SRC_FILES_APP
     ${CMAKE_SOURCE_DIR}/src/testing-libgdf.cu)
